--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles/normalize.css" />
-    <link rel="stylesheet" href="../styles/form.css">  <!-- ../ is added to refer to the previous file. -->
+    <link rel="stylesheet" href="styles/form.css"> 
 </head>
 <body>
     <div class="container">
