revise img link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="screen--right"></div>
             <div class="screen__image">
-                <img src="/images/yellow-duck.jpg" alt="Yellow Duck">
+                <img src="images/yellow-duck.jpg" alt="Yellow Duck">
             </div>
         </div>
     </div> 
