add hover to textarea and add id to message rows in html

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                     <label for="email">EMAIL</label>
                         <input type="email" name="email" id="email" class="input-field" placeholder="Enter your email" required> <!--required e-mail info-->
                     <label for="regarding">MESSAGE REGARDING</label>
-                        <textarea name="message" cols="20" rows="2" class="textarea"></textarea>                
+                        <textarea name="message" cols="20" rows="2" id="regarding" class="textarea"></textarea>                
                     <label for="message">MESSAGE</label>
-                        <textarea name="message" cols="55" rows="2" class="textarea" placeholder="Enter your message" maxlength="400"></textarea>
+                        <textarea name="message" cols="55" rows="2" id="message" class="textarea" placeholder="Enter your message" maxlength="400"></textarea>  <!--id name and label for should be parallel.-->
                     <button type="submit" class="button">SEND MESSAGE</button>
                 </form>
             </div>
